# prl_ur5_ros2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Readme.md  dependencies.repos  local_build.md  start_docker.bash
col_checker/: package.xml  setup.cfg  setup.py
docker-ros2/: Dockerfile  README.md  entrypoint.sh  setup_docker.bash  start_docker.bash
prl_ur5_control/: CMakeLists.txt  package.xml  readme.md
prl_ur5_gazebo/: CMakeLists.txt  package.xml  readme.md
prl_ur5_gazebo/config/: camera_bridge.yaml  dual_ur_controller.yaml  ft300_controller.yaml  gz_bridge.yaml  left_ur_controller.yaml
prl_ur5_gazebo/launch/: align_depth.launch.py  display.launch.py  start_gazebo_sim.launch.py  workbench_control.launch.py
prl_ur5_gazebo/rviz/: config.rviz
prl_ur5_gazebo/scripts/: generate_cameras_bridge.py
prl_ur5_gazebo/urdf/: _ft300_gazebo.urdf.xacro  dual.urdf.xacro  env.urdf.xacro  ur5_complete_arm_gazebo.urdf.xacro  workbench_gazebo.urdf.xacro
prl_ur5_gazebo/world/: default.sdf  default_world.sdf  onrobot_world.sdf
prl_ur5_moveit/: .setup_assistant  CMakeLists.txt  package.xml  readme.md
prl_ur5_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mantis.ros2_control.xacro  mantis.srdf  mantis.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  ur5.ros2_control.xacro  ur5.srdf  ur5.urdf.xacro
prl_ur5_moveit/launch/: demo.launch.py  gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  start_moveit.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
prl_ur5_moveit/src/: wait_for_joint_states.cpp
prl_ur5_run/: CMakeLists.txt  package.xml  readme.md
prl_ur5_run/launch/: real.launch.py  sim.launch.py
(+87 files in other folders)
