<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>prl_ur5_run</name>
  <version>0.1.0</version>
  <description>prl_ur5_run Robotics Lab</description>
  <maintainer email="timothee.carecchio@inria.fr">Timothee Carecchio</maintainer>
  <author email="timothee.carecchio@inria.fr">Timothee Carecchio</author>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>urdf_launch</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
